--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
 	<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
 		<div class="w3-bar  w3-opacity w3-hover-opacity-off w3-center  w3-small ">
-			<a href="#Domov" class="w3-bar-item w3-button" style="width:28% !important">Domov</a>
-			<a href="#Onás" class="w3-bar-item w3-button" style="width:28% !important">Onás</a>
-			<a href="#Fotky" class="w3-bar-item w3-button" style="width:28% !important">Fotky</a>
-			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:28% !important">Kontakt</a>
+			<a href="#Domov" class="w3-bar-item w3-button" style="width:25% !important">Domov</a>
+			<a href="#Onás" class="w3-bar-item w3-button" style="width:25% !important">Onás</a>
+			<a href="#Fotky" class="w3-bar-item w3-button" style="width:25% !important">Fotky</a>
+			<a href="#Kontakt" class="w3-bar-item w3-button" style="width:25% !important">Kontakt</a>
 		</div>
 	</div>
 
@@ -68,99 +68,99 @@
 		<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="Onás">
 			<h2 class="w3-text-light-blue">O nás</h2>
 			<hr style="width:200px" class="w3-opacity">
-				<b>Ahojte ľudia!</b><br>
-				<b>Hi People!</b>
-				<br>
-				<b>WebServis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácií doplnených a aktualizovaných. Vaše otázky píšte na kontakt, kde sa budem snažiť na ne čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky. Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </b>
+			<b>Ahojte ľudia!</b><br>
+			<b>Hi People!</b>
+			<br>
+			<b>WebServis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácií doplnených a aktualizovaných. Vaše otázky píšte na kontakt, kde sa budem snažiť na ne čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky. Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </b>
 
-				<h3 class="w3-padding-16 w3-text-light-blue">Naše zručnosti</h3>
-				<p class="w3-wide">Fotografovanie</p>
-				<div class="w3-white">
-					<div class="w3-light-blue" style="height:28px;width:85%"></div>
+			<h3 class="w3-padding-16 w3-text-light-blue">Naše zručnosti</h3>
+			<p class="w3-wide">Fotografovanie</p>
+			<div class="w3-white">
+				<div class="w3-light-blue" style="height:28px;width:85%"></div>
+			</div>
+			<p class="w3-wide">Web dizajn</p>
+			<div class="w3-white">
+				<div class="w3-light-blue" style="height:28px;width:95%"></div>
+			</div>
+			<p class="w3-wide">Web Technológie a nástroje</p>
+			<div class="w3-white">
+				<div class="w3-light-blue" style="height:28px;width:85%"></div>
+			</div><br>
+
+			<div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
+				<div class="w3-quarter w3-section">
+					<span class="w3-xlarge">11+</span><br>
+					Partneri
 				</div>
-				<p class="w3-wide">Web dizajn</p>
-				<div class="w3-white">
-					<div class="w3-light-blue" style="height:28px;width:95%"></div>
+				<div class="w3-quarter w3-section">
+					<span class="w3-xlarge">55+</span><br>
+					Projekty
 				</div>
-				<p class="w3-wide">Web Technológie a nástroje</p>
-				<div class="w3-white">
-					<div class="w3-light-blue" style="height:28px;width:85%"></div>
-				</div><br>
-
-				<div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
-					<div class="w3-quarter w3-section">
-						<span class="w3-xlarge">11+</span><br>
-						Partneri
-					</div>
-					<div class="w3-quarter w3-section">
-						<span class="w3-xlarge">55+</span><br>
-						Projekty
-					</div>
-					<div class="w3-quarter w3-section">
-						<span class="w3-xlarge">89+</span><br>
-						Veselí klienti
-					</div>
-					<div class="w3-quarter w3-section">
-						<span class="w3-xlarge">150+</span><br>
-						Stretnutia
-					</div>
+				<div class="w3-quarter w3-section">
+					<span class="w3-xlarge">89+</span><br>
+					Veselí klienti
 				</div>
+				<div class="w3-quarter w3-section">
+					<span class="w3-xlarge">150+</span><br>
+					Stretnutia
+				</div>
+			</div>
 
-				<button class="w3-button w3-hover-blue w3-padding-large w3-section">
-					<i class="fa fa-download"></i> Download
-				</button>
+			<button class="w3-button w3-hover-blue w3-padding-large w3-section">
+				<i class="fa fa-download"></i> Download
+			</button>
 
-				<!-- Grid for pricing tables -->
-				<h3 class="w3-padding-16 w3-text-light-blue">Náš cenník</h3>
-				<div class="w3-row-padding" style="margin:0 -16px">
-					<div class="w3-half w3-margin-bottom">
-						<ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-							<li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
-							<li class="w3-padding-16">Web dizajn a návrh</li>
-							<li class="w3-padding-16">Mail podpora</li>
-							<li class="w3-padding-16">5GB úložisko</li>
-							<li class="w3-padding-16">Bezpečný hosting</li>
-							<li class="w3-padding-16">Registrácia domény</li>
-							<li class="w3-padding-16">
-								<h2>10€</h2>
-								<span class="w3-opacity">na mesiac</span>
-							</li>
-							<li class="w3-light-grey w3-padding-24">
-								<button class="w3-button w3-white w3-padding-large w3-hover-blue">Prihlás sa</button>
-							</li>
-						</ul>
-					</div>
-
-					<div class="w3-half">
-						<ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-							<li class="w3-dark-grey w3-xlarge w3-padding-32">Pro</li>
-							<li class="w3-padding-16">Web dizajn a tvorba</li>
-							<li class="w3-padding-16">Fotky a Mail podpora</li>
-							<li class="w3-padding-16">Tvorba eshopov</li>
-							<li class="w3-padding-16">30GB úložisko</li>
-							<li class="w3-padding-16">Registrácia domény</li>
-							<li class="w3-padding-16">
-								<h2>25€</h2>
-								<span class="w3-opacity">na mesiac</span>
-							</li>
-							<li class="w3-light-grey w3-padding-24">
-								<button class="w3-button w3-white w3-padding-large w3-hover-blue">Prihlás sa</button>
-							</li>
-						</ul>
-					</div>
-					<!-- End Grid/Pricing tables -->
+			<!-- Grid for pricing tables -->
+			<h3 class="w3-padding-16 w3-text-light-blue">Náš cenník</h3>
+			<div class="w3-row-padding" style="margin:0 -16px">
+				<div class="w3-half w3-margin-bottom">
+					<ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+						<li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
+						<li class="w3-padding-16">Web dizajn a návrh</li>
+						<li class="w3-padding-16">Mail podpora</li>
+						<li class="w3-padding-16">5GB úložisko</li>
+						<li class="w3-padding-16">Bezpečný hosting</li>
+						<li class="w3-padding-16">Registrácia domény</li>
+						<li class="w3-padding-16">
+							<h2>10€</h2>
+							<span class="w3-opacity">na mesiac</span>
+						</li>
+						<li class="w3-light-grey w3-padding-24">
+							<button class="w3-button w3-white w3-padding-large w3-hover-blue">Prihlás sa</button>
+						</li>
+					</ul>
 				</div>
 
-				<!-- Testimonials -->
-				<h3 class="w3-padding-24  w3-text-light-blue">Referencie</h3>
-				<img src="./Image/b7c27aee54e7a3d3510730a51e6de73e.jpg" alt="Ch. Fox" class="w3-left w3-circle w3-margin-right" style="width:80px">
-				<p><span class="w3-large w3-margin-right">Chris Fox.</span> ASP Corporation.</p>
-				<p>”Tento pán a jeho spoločnosť WebServis sa starajú o naše stránky už celé roky. Dbajú o ich bezpečnosť a navyše aj aby naše stránky fungovali ako hodinky.Ďakujeme“</p>
-				<br>
-				<img src="./Image/profile-pic.jpg" alt="J.Veselá" class="w3-left w3-circle w3-margin-right" style="width:80px">
-				<p><span class="w3-large w3-margin-right">Jana Veselá.</span> Podnikateľka.</p>
-				<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Ďakujeme ešte raz“</p>
-				<!-- End About Section -->
+				<div class="w3-half">
+					<ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+						<li class="w3-dark-grey w3-xlarge w3-padding-32">Pro</li>
+						<li class="w3-padding-16">Web dizajn a tvorba</li>
+						<li class="w3-padding-16">Fotky a Mail podpora</li>
+						<li class="w3-padding-16">Tvorba eshopov</li>
+						<li class="w3-padding-16">30GB úložisko</li>
+						<li class="w3-padding-16">Registrácia domény</li>
+						<li class="w3-padding-16">
+							<h2>25€</h2>
+							<span class="w3-opacity">na mesiac</span>
+						</li>
+						<li class="w3-light-grey w3-padding-24">
+							<button class="w3-button w3-white w3-padding-large w3-hover-blue">Prihlás sa</button>
+						</li>
+					</ul>
+				</div>
+				<!-- End Grid/Pricing tables -->
+			</div>
+
+			<!-- Testimonials -->
+			<h3 class="w3-padding-24  w3-text-light-blue">Referencie</h3>
+			<img src="./Image/b7c27aee54e7a3d3510730a51e6de73e.jpg" alt="Ch. Fox" class="w3-left w3-circle w3-margin-right" style="width:80px">
+			<p><span class="w3-large w3-margin-right">Chris Fox.</span> ASP Corporation.</p>
+			<p>”Tento pán a jeho spoločnosť WebServis sa starajú o naše stránky už celé roky. Dbajú o ich bezpečnosť a navyše aj aby naše stránky fungovali ako hodinky.Ďakujeme“</p>
+			<br>
+			<img src="./Image/profile-pic.jpg" alt="J.Veselá" class="w3-left w3-circle w3-margin-right" style="width:80px">
+			<p><span class="w3-large w3-margin-right">Jana Veselá.</span> Podnikateľka.</p>
+			<p>”Našu firmu a jej výrobky sme potrebovali lepšie prezentovať na webe.Pán V.K. nám spravil perfetnú stránku.Teraz iba v dobrom,skoro nestíhame zásobovať trh našími výrobkami.Ďakujeme ešte raz“</p>
+			<!-- End About Section -->
 
 		</div>
 
@@ -224,7 +224,7 @@
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium"><b>Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a><br>                       <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a></b>
+			<p class="w3-medium"><b>Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a> <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a></b>
 				<!-- End footer -->
 		</footer>
 
