--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<p class="w3-medium"><b>Powered by V.K.&amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom</a> <a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue">Pozri aj na W3Schools.Uč sa základy tvorenia webov.</a></b>
+			<b style="w3-medium"><b>Powered by V.K.&amp;WebServis©<a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green"><b>Nakopneme váš web k lepším výsledkom<a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue"><b>Pozri aj na W3Schools.Uč sa základy tvorenia webov.</b></a>
 				<!-- End footer -->
 		</footer>
 
