--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<p><i class="fa fa-phone fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Telefón: +421556711924</p>
 				<p><i class="fa fa-envelope fa-fw w3-text-grey w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
 			</div><br>
-			<p style=" w3-text-blue w3-xlarge">Napíšte mi otázku a odošlite</p><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
+			<p style=" w3-xxlarge">Napíšte mi otázku a odošlite</p><a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a>
 
 			<form action="/action_page.php" target="_blank">
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
@@ -224,8 +224,8 @@
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<b style="">Powered by V.K.&amp;WebServis©<a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green"></a>Nakopneme váš web k lepším výsledkom<a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue"></a>Pozri aj na W3Schools.Uč sa základy tvorenia webov.</b>
-				<!-- End footer -->
+			<b style="">Powered by V.K.&amp;WebServis©<br><a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green"></a>Nakopneme váš web k lepším výsledkom<a href="https://www.w3schools.com/?rel=" target="_blank" class="w3-hover-text-blue"></a>Pozri aj na W3Schools.Uč sa základy tvorenia webov.</b>
+			<!-- End footer -->
 		</footer>
 
 		<!-- END PAGE CONTENT -->
