--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<b class="w3-medium">Powered by WebServis <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom.</a></b>
+			<b class="w3-medium">Powered by V.Ksenič &amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme váš web k lepším výsledkom.</a></b>
 				<!-- End footer -->
 		</footer>
 
