--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<p><i class="fa fa-phone fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Telefón: +421556711924</p>
 				<p><i class="fa fa-envelope fa-fw w3-text-grey w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
 			</div><br>
-			<b class="w3-medium">Napíšte mi otázku a odošlite<a href="https://www.facebook.com/vladimir.ksenic" target="_blank"></a></b>
+			<b class="w3-medium"><a href="https://www.facebook.com/vladimir.ksenic" target="_blank" class="w3-hover-text-blue">Napíšte mi otázku a odošlite</a></b>
 
 			<form action="/action_page.php" target="_blank">
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
@@ -224,7 +224,7 @@
 			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-opacity"></i>
-			<b class="w3-medium">Powered by V.Ksenič &amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme Váš web k lepším výsledkom,skúste to s nami</a></b>
+			<b class="w3-medium">Powered by V.Ksenič &amp;WebServis© <a href="https://ladow1.github.io/www/#Domov" target="_blank" class="w3-hover-text-green">Nakopneme Váš web k lepším výsledkom,skúste to s nami!</a></b>
 			<!-- End footer -->
 		</footer>
 
