--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 
-.w3-sidebar {width: 120px;background: #222;}
+.w3-sidebar {width: 100px;background: #222;}
 
 #main {margin-left: 120px}
 
@@ -25,7 +25,7 @@
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 		<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%" height="110">
+		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:90%" height="110">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-small  w3-text-light-blue">
 			<i class="fa fa-home w3-xxlarge"></i>
 			<p>Domov</p>
@@ -69,7 +69,7 @@
 			<h2 class="w3-text-light-blue">O nás</h2>
 			<hr style="width:200px" class="w3-opacity">
 			<b>Ahojte ľudia!</b><br>
-			<b>Hi People!</b>
+			<b>Hi Everyone!</b>
 			<br>
 			<b>WebServis© sídli v Košiciach.Toto je reklamná prezenčná webstránka, ponúkame webové služby v oblasti dizajnu, opravy až po vytvorenie finálnej plne funkčnej webovej stránky. Momentálne sa na tejto stránke pracuje, postupne a neskôr bude množstvo informácií doplnených a aktualizovaných. Vaše otázky píšte na kontakt, kde sa budem snažiť na ne čím skôr odpovedať. Vopred ďakujem za strpenie počas úprav tejto stránky. Thanks4visit:)<br>Prajem Vám priatelia Pekný deň:) </b>
 
