--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>WebServis©</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="/Css/w31.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w31.css">
+<link rel="stylesheet" href="/Css/W3css.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -221,9 +221,9 @@
 			<i class="fa fa-facebook-official w3-hover-text-blue"></i>
 			<i class="fa fa-instagram w3-hover-opacity"></i>
 			<i class="fa fa-snapchat w3-hover-opacity"></i>
-			<i class="fa fa-pinterest-p w3-hover-opacity"></i>
+			<i class="fa fa-pinterest-p w3-hover-text-red"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
-			<i class="fa fa-linkedin w3-hover-opacity"></i>
+			<i class="fa fa-linkedin w3-hover-text-blue"></i>
 			<b class="w3-medium">Powered by V.Ksenič &amp;WebServis© <a href="https://www.facebook.com/vladimir.ksenic" target="_blank" class="w3-hover-text-blue">Nakopneme Váš web k lepším výsledkom,skúste to s nami!</a></b>
 			<!-- End footer -->
 		</footer>
