--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> WebServis© </title>
 <meta charset="UTF-8">
 <meta name="viewport"  content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <link rel="stylesheet" href="/Css/W3css.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
