--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 		<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:95%" height="110">
+		<img src="./Image/IMG_3155.jpg" alt="" class="" style="width:100%" height="">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-small  w3-text-light-blue">
 			<i class="fa fa-home w3-xxlarge"></i>
 			<p>Domov</p>
@@ -197,19 +197,18 @@
 
 			<div class="w3-section">
 				<p><i class="fa fa-map-marker fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Košice, SVK</p>
-				<p><i class="fa fa-phone fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Telefón: +421556711924</p>
-				<p><i class="fa fa-envelope fa-fw w3-text-grey w3-xxlarge w3-margin-right"> </i> Email: ksenicv@gmail.com</p>
+				<p><i class="fa fa-phone fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Telefón: +421907151293</p>
+				<p><i class="fa fa-envelope fa-fw w3-text-grey w3-xxlarge w3-margin-right"></i> Email: ksenicv@gmail.com</p>
 			</div><br>
-			<b class="w3-medium"><a href="" target="_blank" class="w3-hover-text-blue">Napíšte mi otázku a odošlite</a></b>
+			<b class="w3-medium w3-hover-text-blue">Napíšte mi otázku a nižšie odošlite</b>
 
-			<form action="/action_page.php" target="_blank">
+			<form action="/action_page.php">
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
 				<p>
-					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey" type="submit">
-						<i class="fa fa-paper-plane"></i> Pošli odkaz
+					<button class="w3-button w3-hover-blue w3-padding-large w3-section" ><a href="mailto:ksenicv@gmail.com" target="_blank"><i class="fa fa-paper-plane"> POŠLI ODKAZ</i></a>
 
 					</button>
 				</p>
@@ -218,14 +217,14 @@
 		</div>
 
 		<!-- Footer -->
-		<footer class="w3-content w3-padding-64  w3-text-grey w3-xlarge">
-			<i class="fa fa-facebook-official w3-hover-text-blue"></i>
+		<footer class="w3-content w3-padding-64  w3-text-grey w3-xxlarge">
+			<a href="https://www.facebook.com/vladimir.ksenic" target="_blank"><i class="fa fa-facebook-official w3-hover-text-blue"></i></a>
 			<i class="fa fa-instagram w3-hover-opacity"></i>
 			<i class="fa fa-snapchat w3-hover-opacity"></i>
 			<i class="fa fa-pinterest-p w3-hover-text-red"></i>
 			<i class="fa fa-twitter w3-hover-opacity"></i>
 			<i class="fa fa-linkedin w3-hover-text-blue"></i>
-			<b class="w3-medium">Powered by V.Ksenič &amp;WebServis© <a href="https://www.facebook.com/vladimir.ksenic" target="_blank" class="w3-hover-text-blue">Nakopneme Váš web k lepším výsledkom,skúste to s nami!</a></b>
+			<b class="w3-medium w3-hover-text-blue">Powered by V.Ksenič &amp;WebServis© Nakopneme Váš web k lepším výsledkom,skúste to s nami!</b>
 			<!-- End footer -->
 		</footer>
 
