--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 		<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="img-responsive" style="width:100%" height="auto">
+		<img src="./Image/IMG_3155.jpg" alt="" class="img-responsive" style="width:100%" height="100px">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-small  w3-text-light-blue">
 			<i class="fa fa-home w3-xxlarge"></i>
 			<p>Domov</p>
