--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- Icon Bar (Sidebar - hidden on small screens) -->
 	<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 		<!-- Avatar image in top left corner -->
-		<img src="./Image/IMG_3155.jpg" alt="" class="img-responsive" style="width:100%" height="100px">
+		<img src="./Image/IMG_3155.jpg" alt="" class="img-responsive" style="width:100%" height="100">
 		<a href="#Domov" class="w3-bar-item w3-button w3-padding-small  w3-text-light-blue">
 			<i class="fa fa-home w3-xxlarge"></i>
 			<p>Domov</p>
@@ -208,7 +208,7 @@
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
 				<p>
-					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey" ><a href="mailto:ksenicv@gmail.com" target="_blank"><i class="fa fa-paper-plane">  Odošli Odkaz</i></a>
+					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey"><a href="mailto:ksenicv@gmail.com" target="_blank"--><i class="fa fa-paper-plane">Odošli Odkaz</i></a>
 
 					</button>
 				</p>
