--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
 				<p>
-					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey"><a href="mailto:ksenicv@gmail.com" target="_blank"--><i class="fa fa-paper-plane">Odošli Odkaz</i></a>
+					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey"><a rel="mailto:ksenicv@gmail.com" target="_blank"><i class="fa fa-paper-plane">Odošli Odkaz</i></a>
 
 					</button>
 				</p>
