--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <title> WebServis© </title>
 <meta charset="UTF-8">
-<meta name="viewport"  content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <link rel="stylesheet" href="/Css/W3css.css">
@@ -203,12 +203,12 @@
 			<b class="w3-medium w3-hover-text-blue">Napíšte mi otázku a nižšie odošlite</b>
 
 			<form action="/action_page.php">
-				<p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+				<p><input class="w3-input w3-padding-16" type="text" placeholder="Vaše meno" required name="Vaše meno"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
 				<p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
 				<p>
-					<button class="w3-button w3-hover-blue w3-padding-large w3-section w3-text-grey"><a rel="mailto:ksenicv@gmail.com" target="_blank"><i class="fa fa-paper-plane">Odošli Odkaz</i></a>
+					<button class="w3-button w3-hover-blue w3-padding-large w3-section"><a href="mailto:ksenicv@gmail.com" target="_blank"><i class="fa fa-paper-plane">Odošli Odkaz</i></a>
 
 					</button>
 				</p>
@@ -219,12 +219,12 @@
 		<!-- Footer -->
 		<footer class="w3-content w3-padding-64  w3-text-grey w3-xxlarge">
 			<a href="https://www.facebook.com/vladimir.ksenic" target="_blank"><i class="fa fa-facebook-official w3-hover-text-blue"></i></a>
-			<i class="fa fa-instagram w3-hover-opacity"></i>
-			<i class="fa fa-snapchat w3-hover-opacity"></i>
+			<i class="fa fa-google w3-hover-text-yellow"></i>
+			<i class="fa fa-github w3-hover-text-white"></i>
 			<i class="fa fa-pinterest-p w3-hover-text-red"></i>
-			<i class="fa fa-twitter w3-hover-opacity"></i>
+			<i class="fa fa-twitter w3-hover-text-white"></i>
 			<i class="fa fa-linkedin w3-hover-text-blue"></i>
-			<b class="w3-medium w3-hover-text-blue">Powered by V.Ksenič &amp;WebServis© Nakopneme Váš web k lepším výsledkom,skúste to s nami!</b>
+			<b class="w3-medium w3-hover-text-green">Powered by V.Ksenič &amp;WebServis©&nbsp; &nbsp;Nakopneme Váš web k lepším výsledkom,skúste to s nami!</b>
 			<!-- End footer -->
 		</footer>
 
